--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@config "../tailwind.config.js";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 
